--- a/index.html
+++ b/index.html
@@ -28,17 +28,19 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/banner.jpg" alt="banner" />
+							<img src="images/centralpark.jpg" alt="banner" />
 						</div>
 					</section>
 
 				<!-- Two fixmylife-->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Magna etiam feugiat</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2>FIXMYLIFE </h2>
+							<p>Fixmylife was founded in 2013.
+								<br> It started out as cycling street wear and later evolved into an online shop that caters to the needs of cyclist. My love of cycling led me to create this brand.
+							</p>
 							<ul class="actions stacked">
-								<li><a href="https://www.fmlcycling.com" class="button">Learn More</a></li>
+								<li><a href="https://www.fmlcycling.com" class="button">Fixmylife shop</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -49,10 +51,12 @@
 				<!-- Three durancycles-->
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Tempus adipiscing</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2>DURAN CYCLES</h2>
+							<p>Duran Cycles is a prototyle bicycle brand i created in 2016. After selling out on the bicycles i later discounted the brand to pursue other goals but do plan in making a comback in the near future.
+								<br>You can view some of out designs and merchandise by clicking the instagram link below.
+							</p>
 							<ul class="actions stacked">
-								<li><a href="https://www.instagram.com/durancycles" class="button">Learn More</a></li>
+								<li><a href="https://www.instagram.com/durancycles" class="button">@durancycles</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -63,10 +67,11 @@
 				<!-- Four fixmylife designs-->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Pharetra etiam nulla</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2>FIXMYLIFE DESIGNS</h2>
+							<p> Early 2016 I created an instagram page called Fixmylife designs to show case some of my creations which at that time were just illustrations but soon after turned into my creative page where I post all of my creations a few of them being a handheld gaming device powered by a single board computer insided a gameboy shell. This is where my interest for code started growing. I found myself having to code python to configure each build I made.
+							</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="https://www.instagram.com/fixmylifedesigns" class="button">@fixmylifedesigns</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -77,10 +82,10 @@
 				<!-- five coding-->
 				<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
-							<h2>Tempus adipiscing</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
+							<h2>CODE & WEB DEVELOPMENT</h2>
+							<p>As my interest for code continued to grow I started looking for education opportunities. I am currently studing at Lambda school to be a Full stack web developer and am expected to finish school winter 2019. </p>
 							<ul class="actions stacked">
-								<li><a href="https://github.com/fixmylifedesigns" class="button">Learn More</a></li>
+								<li><a href="https://github.com/fixmylifedesigns" class="button">GITHUB</a></li>
 							</ul>
 						</div>
 						<div class="image">
