--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 							</ul>
 						</div>
 						<div class="image">
-							<img src="images/centralpark.jpg" alt="banner" />
+							<img src="images/banner.jpg" alt="banner" />
 						</div>
 					</section>
 
