some final adds

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Lambda School Projects</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum.</p>
+							<p> here are some photos of sites i have built or worked on at Lambda School.</p>
 						</div>
 
 						<!-- Gallery -->
@@ -107,8 +107,8 @@
 										<img src="images/gallery/thumbs/01.png" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Ipsum Dolor</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Portfolio</h3>
+										<p>Full Page</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
@@ -119,24 +119,48 @@
 										<img src="images/gallery/thumbs/02.png" alt="" />
 									</a>
 									<div class="caption">
-										<h3>Feugiat Lorem</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<h3>Sprint Challenge</h3>
+										<p>Home Page</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
 									</div>
 								</article>
 								<article>
-									<a href="images/gallery/fulls/03.jpg" class="image">
+									<a href="images/gallery/fulls/03.png" class="image">
 										<img src="images/gallery/thumbs/03.png" alt="" />
 									</a>
 									<div class="caption">
 										<h3>Sprint Challenge</h3>
-										<p>Lorem ipsum dolor amet, consectetur magna etiam elit. Etiam sed ultrices.</p>
+										<p>About Page</p>
 										<ul class="actions fixed">
 											<li><span class="button small">Details</span></li>
 										</ul>
 									</div>
+								</article>
+								<article>
+										<a href="images/gallery/fulls/04.jpg" class="image">
+											<img src="images/gallery/thumbs/04.png" alt="" />
+										</a>
+										<div class="caption">
+											<h3>Great Idea Webpage</h3>
+											<p>Home Page</p>
+											<ul class="actions fixed">
+												<li><span class="button small">Details</span></li>
+											</ul>
+										</div>
+								</article>
+								<article>
+											<a href="images/gallery/fulls/05.jpg" class="image">
+												<img src="images/gallery/thumbs/05.jpg" alt="" />
+											</a>
+											<div class="caption">
+												<h3>Great Idea Webpage</h3>
+												<p>Service page</p>
+												<ul class="actions fixed">
+													<li><span class="button small">Details</span></li>
+												</ul>
+											</div>
 								</article>
 							</div>
 					</section>
