--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 										</div>
 								</article>
 								<article>
-											<a href="images/gallery/fulls/05.jpg" class="image">
+											<a href="images/gallery/fulls/05.png" class="image">
 												<img src="images/gallery/thumbs/05.jpg" alt="" />
 											</a>
 											<div class="caption">
