--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
 					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>DURAN CYCLES</h2>
-							<p>Duran Cycles is a prototyle bicycle brand i created in 2016. After selling out on the bicycles i later discounted the brand to pursue other goals but do plan in making a comback in the near future.
-								<br>You can view some of out designs and merchandise by clicking the instagram link below.
+							<p>Duran Cycles is a prototyle bicycle brand I created in 2016. After selling out the bicycles, I later discontinued the brand to pursue other goals but do plan on making a comback in the near future.
+								<br>You can view some of my designs and merchandise by clicking the instagram link below.
 							</p>
 							<ul class="actions stacked">
 								<li><a href="https://www.instagram.com/durancycles" class="button">@durancycles</a></li>
@@ -68,7 +68,7 @@
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>FIXMYLIFE DESIGNS</h2>
-							<p> Early 2016 I created an instagram page called Fixmylife designs to show case some of my creations which at that time were just illustrations but soon after turned into my creative page where I post all of my creations a few of them being a handheld gaming device powered by a single board computer insided a gameboy shell. This is where my interest for code started growing. I found myself having to code python to configure each build I made.
+							<p> Early 2016 I created an instagram page called Fixmylife designs, to show case some of my creations. At the time my creations were just illustrations, soon after turned into my creative page where I post all of my creations. A few of them being a handheld gaming device powered by a single board computer insided a gameboy shell. This is where my interest for code started to grow. I found myself having to code python to configure each build I made.
 							</p>
 							<ul class="actions stacked">
 								<li><a href="https://www.instagram.com/fixmylifedesigns" class="button">@fixmylifedesigns</a></li>
@@ -83,7 +83,7 @@
 				<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
 						<div class="content">
 							<h2>CODE & WEB DEVELOPMENT</h2>
-							<p>As my interest for code continued to grow I started looking for education opportunities. I am currently studing at Lambda school to be a Full stack web developer and am expected to finish school winter 2019. </p>
+							<p>As my interest for code continued to grow I started looking for education opportunities. I am currently studing at Lambda school to become a Full Stack Web Developer. I am expected to finish school winter 2019. </p>
 							<ul class="actions stacked">
 								<li><a href="https://github.com/fixmylifedesigns" class="button">GITHUB</a></li>
 							</ul>
@@ -97,7 +97,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner">
 							<h2>Lambda School Projects</h2>
-							<p> here are some photos of sites i have built or worked on at Lambda School.</p>
+							<p> Here are some photos of sites I have built or worked on at Lambda School.</p>
 						</div>
 
 						<!-- Gallery -->
