--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
 							<h1>Irving Duran</h1>
-							<p class="major"> I am a business owner, a creator, an artist, an entry level full stack web developer, and more. 
+							<p class="major"> I am a business owner, a creator, an artist, a full stack web developer, and more. 
 								<br> With an interest for technology and working with like minded people </a>.</p>
 							<ul class="actions stacked">
 								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
